<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/text_date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/date_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/date_name"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/date_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/breakfast_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_name"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:text="@string/text_breakfast"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/breakfast_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/breakfast_name"
            android:layout_below="@id/date_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/breakfast_name"
            android:hint="@string/text_breakfast_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/lunch_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/breakfast_name"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:text="@string/text_lunch"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/lunch_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/lunch_name"
            android:layout_below="@id/breakfast_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/lunch_name"
            android:hint="@string/text_lunch_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/dinner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lunch_name"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:text="@string/text_dinner"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dinner_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/dinner_name"
            android:layout_below="@id/lunch_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/dinner_name"
            android:hint="@string/text_dinner_hint"
            android:inputType="text" />


        <TextView
            android:id="@+id/dapi_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dinner_name"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:text="@string/text_dapi"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dapi_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/dapi_name"
            android:layout_below="@id/dinner_content"
            android:layout_marginStart="21dp"
            android:layout_toEndOf="@+id/dinner_name"
            android:hint="@string/text_zero_time"
            android:inputType="text" />

        <Button
            android:id="@+id/dapi_add_times"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/dapi_name"
            android:layout_toEndOf="@+id/dapi_content"
            android:text="@string/text_add"
            android:textAllCaps="false" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dage_name_new"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/text_dage"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dage_content_morning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_zero_time"
            android:inputType="text" />

        <Button
            android:id="@+id/dage_content_morning_add_times"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_add"
            android:textAllCaps="false" />

        <EditText
            android:id="@+id/dage_content_afternoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_zero_time"
            android:inputType="text" />

        <Button
            android:id="@+id/dage_content_afternoon_add_times"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_add"
            android:textAllCaps="false" />

        <EditText
            android:id="@+id/dage_content_evening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_zero_time"
            android:inputType="text" />

        <Button
            android:id="@+id/dage_content_evening_add_times"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_add"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>